fix: fix wrong padding value

--- a/assets/css/seguros/faq.css
+++ b/assets/css/seguros/faq.css
@@ -1,6 +1,6 @@
 .faq {
   padding-bottom: 120px;
-  padding-top: 12px;
+  padding-top: 120px;
 }
 
 .faq h2 {
